--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-charts": "^6.0.0-alpha.15",
     "@prisma/client": "^5.4.2",
     "@types/date-fns": "^2.6.0",
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
